--- a/app/src/styles/layout/_header.scss
+++ b/app/src/styles/layout/_header.scss
@@ -137,37 +137,50 @@
         transition: width 300ms cubic-bezier(0.47, 0, 0.745, 0.715);
       }
 
-      &.--writings:after {
-        background: url('../assets/images/hover-writings.svg') no-repeat left center/auto 9px;
-
-        @media screen and (max-width: 768px) {
-          background-size: auto 8px;
+      &.--writings {
+        &::after {
+          background: url('../assets/images/hover-writings.svg') no-repeat left center/auto 9px;
+          @media screen and (max-width: 768px) {
+            background-size: auto 8px;
+          }
+          @include breakpoint(small down) {
+            background-size: auto 7px;
+          }
         }
-
-        @include breakpoint(small down) {
-          background-size: auto 7px;
+        &.es::after {
+          background-image: url('../assets/images/hover-escritos.svg');
         }
       }
-      &.--work:after {
+      &.--work {
+        &.es::after {
+          background-image: url('../assets/images/hover-trabajos.svg');
+        }
+        &::after {
         background: url('../assets/images/hover-work.svg') no-repeat left center/auto 6px;
 
-        @media screen and (max-width: 768px) {
-          background-size: auto 6px;
-        }
+          @media screen and (max-width: 768px) {
+            background-size: auto 6px;
+          }
 
-        @include breakpoint(small down) {
-          background-size: auto 4.5px;
+          @include breakpoint(small down) {
+            background-size: auto 4.5px;
+          }
         }
       }
-      &.--me:after {
+      &.--me {
+        &.es::after {
+          background-image: url('../assets/images/hover-sobre-mi.svg');
+        }
+        &::after {
         background: url('../assets/images/hover-me.svg') no-repeat left center/auto 10px;
 
-        @media screen and (max-width: 768px) {
-          background-size: auto 9px;
-        }
+          @media screen and (max-width: 768px) {
+            background-size: auto 9px;
+          }
 
-        @include breakpoint(small down) {
-          background-size: auto 7px;
+          @include breakpoint(small down) {
+            background-size: auto 7px;
+          }
         }
       }
 
